# duckdb-evalexpr-rhai-extension

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/: dependabot.yml
.github/workflows/: MainDistributionPipeline.yml  MainDistributionPipeline_v1.3.yml  schedule-1.3.yml
duckdb_evalexpr_rhai_rust/: Cargo.toml  build.rs  cbindgen.toml
duckdb_evalexpr_rhai_rust/src/: lib.rs
src/: evalexpr_rhai_extension.cpp
src/include/: evalexpr_rhai_extension.hpp  rust.h
test/: README.md
test/sql/: evalexpr_rhai.test
