[package]
name = "duckdb_evalexpr_rhai_rust"
version = "0.1.0"
edition = "2021"
publish = false

build = "build.rs"

[lib]
name = "duckdb_evalexpr_rhai_rust"
crate-type = ["staticlib"]

[dependencies]
rhai = { version = "1.20.0", features = ["serde"] }
rhai-fs = "0.1.3"
rhai-rand = "0.1.6"
rhai-sci = { version = "0.2.1", features = ["nalgebra", "rand"], default-features=false }
rhai-url = "0.0.5"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
